[tool.poetry]
name = "fluid-simulation"
version = "0.1.0"
description = ""
authors = ["Ramon Meza <ramon_meza@live.com>"]
readme = "README.md"
packages = [{include = "fluid_simulation"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
dearpygui = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
